<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/drawer_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/drawer_cat"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_near"
            android:icon="@drawable/drawer_near"
            android:checkable="false"
            android:title="@string/menu_near" />

        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/d_latest"
            android:title="@string/menu_recent" />

        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/d_all_location"
            android:title="@string/menu_all" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/drawer_fav"
            android:title="@string/menu_favorite" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/drawer_setting"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/nav_profile"
            android:checkable="false"
            android:icon="@drawable/drawer_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_login"
            android:checkable="false"
            android:icon="@drawable/drawer_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@drawable/drawer_logout"
            android:title="@string/menu_logout" />

    </group>

</menu>
